feat: switch to kc 22